STYLE: Remove white space after fixed header and social media section.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,8 +149,9 @@ nav a:hover {
     background-attachment: fixed;
     background-size: cover;
 }
+
 .guitar-image-welcome {
-    margin-top: 200px;
+    margin-top: 60px;
     color: #fff;
 }
 
